# py_lib_starter

./: .gitignore  README.md  main.py  pyproject.toml  setup_library.py
config/: default.py
src/py_lib_starter/: main.py
src/py_lib_starter/config/: default.py
src/py_lib_starter/templates/: __init__.py  conda_meta.py  core.py  license.py  pyproject.py  readme.py  setup_cfg.py
src/py_lib_starter/utils/: file_ops.py  user_input.py  validation.py
templates/: __init__.py  changelog.py  docs.py  gitignore.py  pyproject.py  readme.py  setup_cfg.py  tests.py
utils/: file_ops.py  user_input.py
