[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_lib_starter"
version = "0.1.0"
description = "A command-line tool for generating standardized Python library project structures"
requires-python = ">=3.8"
authors = [
    {name = "Eric Wu", email = "your.email@example.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[project.scripts]
create-pylib = "py_lib_starter.main:main"